// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`identifier-1.ts format 1`] = `
====================================options=====================================
cursorOffset: 5
parsers: ["typescript", "babel", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
let i<|>: T;

=====================================output=====================================
let i<|>: T;

================================================================================
`;

exports[`identifier-2.ts format 1`] = `
====================================options=====================================
cursorOffset: 6
parsers: ["typescript", "babel", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
let i:<|> T;

=====================================output=====================================
let i:<|> T;

================================================================================
`;

exports[`identifier-3.ts format 1`] = `
====================================options=====================================
cursorOffset: 5
parsers: ["typescript", "babel", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
let i<|> : T;

=====================================output=====================================
let i<|>: T;

================================================================================
`;
